# acp-agent-rs

./: .dockerignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  IMPL.md  README.md  UDS_DESIGN.md
.github/workflows/: release.yml
archive/commands/: README.md  run.rs  serve.rs
scripts/: install.sh
sdk/acp-agent/: pyproject.toml
sdk/acp-agent/src/acp_agent/: __init__.py
sdk/python/: .gitignore  .ignore  pyproject.toml
sdk/python/src/acp_agent/: __init__.py  connection.py  readonly_client.py  transport.py
sdk/python/tests/: test_sdk.py
src/: install.rs  lib.rs  main.rs  registry.rs
src/commands/: install.rs  install_env.rs  list.rs  mod.rs  run.rs  search.rs  serve.rs
src/runtime/: cache.rs  distribution.rs  mod.rs  prepare.rs  process.rs  serve.rs  stdio.rs
src/runtime/transports/: h2.rs  mod.rs  raw.rs  tcp.rs  uds.rs  ws.rs
tests/: transport_h2.rs  transport_tcp.rs  transport_uds.rs  transport_ws.rs
tests/support/: transport.rs
