[package]
name = "acp-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
jsonrpc = "0.19.0"
reqwest = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-websockets = "0.13.2"
zip = "8.4.0"
