[package]
name = "acp-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
http-body-util = "0.1.3"
hyper = { version = "1.5.2", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1.10", features = ["http1", "http2", "server", "tokio"] }
jsonrpsee = { version = "0.26.0", features = ["server", "ws-client"] }
reqwest = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.17"
zip = "8.4.0"

[dev-dependencies]
agent-client-protocol = "0.10.3"
async-trait = "0.1.89"
futures-util = { version = "0.3.31", features = ["sink"] }
piper = "0.2.4"
tokio-util = { version = "0.7.17", features = ["compat"] }
tokio-tungstenite = "0.29.0"
