[package]
name = "acp-agent"
version = "0.0.0"
edition = "2024"
description = "CLI for discovering, installing, launching, and proxying ACP agents from the public registry"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/observerw/acp-agent-rs"
homepage = "https://github.com/observerw/acp-agent-rs"
documentation = "https://docs.rs/acp-agent"
keywords = ["acp", "agent", "cli", "proxy", "rpc"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0.102"
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
http-body-util = "0.1.3"
hyper = { version = "1.5.2", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1.10", features = [
    "http1",
    "http2",
    "server",
    "tokio",
] }
futures-util = { version = "0.3.31", features = ["sink"] }
reqwest = "0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.29.0"
zip = "8.4.0"

[dev-dependencies]
agent-client-protocol = "0.10.3"
async-trait = "0.1.89"
piper = "0.2.4"
tokio-util = { version = "0.7.17", features = ["compat"] }
